--- a/server/package.json
+++ b/server/package.json
@@ -3,21 +3,34 @@
   "version": "1.0.0",
   "main": "src/server.ts",
   "scripts": {
-    "dev": "nodemon src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon -r tsconfig-paths/register src/server.ts",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "kysely": "kysely-codegen --include-pattern='public.*' --out-file src/helpers/types/db.d.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/pg": "^8.11.10",
+    "kysely-codegen": "^0.17.0",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.7"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.701.0",
+    "@types/knex": "^0.16.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "knex": "^3.1.0",
-    "tsc": "^2.0.4"
+    "kysely": "^0.27.4",
+    "pg": "^8.13.1",
+    "ts-node": "^10.9.2",
+    "tsc": "^2.0.4",
+    "tsconfig-paths": "^4.2.0",
+    "zod": "^3.23.8"
   }
 }
