--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "pg": "^8.13.1",
     "ts-node": "^10.9.2",
     "tsc": "^2.0.4",
+    "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
     "zod": "^3.23.8"
   }
