--- a/server/package.json
+++ b/server/package.json
@@ -30,9 +30,9 @@
     "kysely": "^0.27.4",
     "pg": "^8.13.1",
     "ts-node": "^10.9.2",
-    "tsc": "^2.0.4",
     "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.7.2",
     "zod": "^3.23.8"
   }
 }
