--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.2",
+    "vercel": "^39.1.2",
     "zod": "^3.23.8"
   }
 }
