--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "src/server.ts",
   "scripts": {
-    "dev": "nodemon -r tsconfig-paths/register src/server.ts",
-    "start": "node dist/server.js",
+    "dev": "nodemon -r tsconfig-paths/register src/index.ts",
+    "start": "node dist/index.js",
     "build": "tsc && tsc-alias",
     "test": "echo \"Error: no test specified\" && exit 1",
     "kysely": "kysely-codegen --include-pattern='public.*' --out-file src/helpers/types/db.d.ts"
