--- a/server/vercel.json
+++ b/server/vercel.json
@@ -8,10 +8,11 @@
     "buildCommand": "bun run build",
     "outputDirectory": "dist",
     "installCommand": "bun install",
+    "devCommand": "bun dev",
     "rewrites": [
         {
             "source": "/(.*)",
-            "destination": "/"
+            "destination": "/api"
         }
     ]
 }
