--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/pg": "^8.11.10",
@@ -24,9 +25,11 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.701.0",
     "@types/knex": "^0.16.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "jwt": "^0.2.0",
     "knex": "^3.1.0",
     "kysely": "^0.27.4",
     "pg": "^8.13.1",
