--- a/server/package.json
+++ b/server/package.json
@@ -17,10 +17,14 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/pg": "^8.11.10",
+    "jest": "^29.7.0",
     "kysely-codegen": "^0.17.0",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "ts-jest": "^29.2.5"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.701.0",
@@ -29,7 +33,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "jwt": "^0.2.0",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "kysely": "^0.27.4",
     "pg": "^8.13.1",
