--- a/buildspec.yml
+++ b/buildspec.yml
@@ -38,16 +38,18 @@ phases:
   #     - sudo apt install unzip
   #     - curl -fsSL https://bun.sh/install | bash
 
-  pre_build:
-    commands:
-      - cd server
-      - npm install
+  # pre_build:
+  #   commands:
+  #     - cd server
+  #     - npm install
     # finally:
     #   - command
     #   - command
 
   build:
     commands:
+      - cd server
+      - npm install
       - npm run build
     #   - command
     # finally:
