--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/lodash": "^4.17.13",
     "@types/pg": "^8.11.10",
     "jest": "^29.7.0",
     "kysely-codegen": "^0.17.0",
@@ -36,6 +37,7 @@
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "kysely": "^0.27.4",
+    "lodash": "^4.17.21",
     "pg": "^8.13.1",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.10",
