--- a/server-ca/package.json
+++ b/server-ca/package.json
@@ -1,12 +1,15 @@
 {
   "scripts": {
-    "kysely": "kysely-codegen --include-pattern='public.*' --out-file src/db.d.ts"
+    "kysely": "kysely-codegen --include-pattern='public.*' --out-file src/db.d.ts",
+    "dev": "nodemon -r tsconfig-paths/register src/server.ts"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "ioredis": "^5.4.2",
+    "jsonwebtoken": "^9.0.2",
     "kysely": "^0.27.5",
     "pg": "^8.13.1",
     "vercel": "^39.1.2",
@@ -16,9 +19,13 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/ioredis": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
     "@types/pg": "^8.11.10",
     "kysely-codegen": "^0.17.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.9",
+    "tsconfig-paths": "^4.2.0"
   }
 }
