--- a/server-ca/package.json
+++ b/server-ca/package.json
@@ -1,7 +1,9 @@
 {
   "scripts": {
     "kysely": "kysely-codegen --include-pattern='public.*' --out-file src/db.d.ts",
-    "dev": "nodemon -r tsconfig-paths/register src/server.ts"
+    "dev": "nodemon -r tsconfig-paths/register src/server.ts",
+    "start": "node dist/server.js",
+    "build": "tsc && tsc-alias"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -11,6 +13,8 @@
     "jsonwebtoken": "^9.0.2",
     "kysely": "^0.27.5",
     "pg": "^8.13.1",
+    "tsc-alias": "^1.8.10",
+    "typescript": "^5.7.2",
     "vercel": "^39.1.2",
     "zod": "^3.24.1"
   },
