--- a/server/package.json
+++ b/server/package.json
@@ -1,48 +1,34 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "main": "src/server.ts",
   "scripts": {
-    "dev": "nodemon -r tsconfig-paths/register src/index.ts",
-    "start": "node dist/index.js",
-    "build": "tsc && tsc-alias",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "kysely": "kysely-codegen --include-pattern='public.*' --out-file src/helpers/types/db.d.ts"
+    "kysely": "kysely-codegen --include-pattern='public.*' --out-file src/db.d.ts",
+    "dev": "nodemon -r tsconfig-paths/register src/server.ts",
+    "start": "node dist/server.js",
+    "build": "tsc && tsc-alias"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "ioredis": "^5.4.2",
+    "jsonwebtoken": "^9.0.2",
+    "kysely": "^0.27.5",
+    "pg": "^8.13.1",
+    "tsc-alias": "^1.8.10",
+    "typescript": "^5.7.2",
+    "vercel": "^39.1.2",
+    "zod": "^3.24.1"
+  },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
-    "@types/jest": "^29.5.14",
+    "@types/ioredis": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
-    "@types/lodash": "^4.17.13",
+    "@types/morgan": "^1.9.9",
     "@types/pg": "^8.11.10",
-    "jest": "^29.7.0",
     "kysely-codegen": "^0.17.0",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.7",
-    "ts-jest": "^29.2.5"
-  },
-  "dependencies": {
-    "@aws-sdk/client-s3": "^3.701.0",
-    "@types/knex": "^0.16.1",
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "jsonwebtoken": "^9.0.2",
-    "knex": "^3.1.0",
-    "kysely": "^0.27.4",
-    "lodash": "^4.17.21",
-    "pg": "^8.13.1",
-    "ts-node": "^10.9.2",
-    "tsc-alias": "^1.8.10",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.7.2",
-    "zod": "^3.23.8"
+    "nodemon": "^3.1.9",
+    "tsconfig-paths": "^4.2.0"
   }
 }
