--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "@maptiler/sdk": "^2.4.1",
     "@types/leaflet": "^1.9.14",
     "@types/react-leaflet": "^3.0.0",
+    "iso8601": "^1.1.1",
     "leaflet": "^1.9.4",
+    "leaflet-timedimension": "^1.1.1",
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
