--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "build": "tsc && tsc-alias"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.717.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
