--- a/client/package.json
+++ b/client/package.json
@@ -10,17 +10,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.2",
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@maptiler/leaflet-maptilersdk": "^2.0.0",
     "@maptiler/sdk": "^2.4.1",
+    "@mladen/leaflet.tilelayer.wmts": "^1.0.0",
     "@types/leaflet": "^1.9.14",
     "@types/react-leaflet": "^3.0.0",
+    "antd": "^5.22.7",
+    "autoprefixer": "^10.4.20",
     "iso8601": "^1.1.1",
     "leaflet": "^1.9.4",
     "leaflet-timedimension": "^1.1.1",
+    "ol": "^10.3.1",
     "path": "^0.12.7",
+    "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
@@ -32,6 +41,8 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10"
