update: left bar

--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.2",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@maptiler/leaflet-maptilersdk": "^2.0.0",
     "@maptiler/sdk": "^2.4.1",
     "@mladen/leaflet.tilelayer.wmts": "^1.0.0",
+    "@mui/material": "^6.3.0",
+    "@mui/x-charts": "^7.23.2",
     "@types/leaflet": "^1.9.14",
     "@types/react-leaflet": "^3.0.0",
     "antd": "^5.22.7",
