--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "leaflet": "^1.9.4",
     "leaflet-timedimension": "^1.1.1",
     "ol": "^10.3.1",
+    "ol-mapbox-style": "^12.4.0",
     "path": "^0.12.7",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
