--- a/client/package.json
+++ b/client/package.json
@@ -20,10 +20,13 @@
     "@mladen/leaflet.tilelayer.wmts": "^1.0.0",
     "@mui/material": "^6.3.0",
     "@mui/x-charts": "^7.23.2",
+    "@tanstack/react-query": "^5.62.15",
     "@types/leaflet": "^1.9.14",
     "@types/react-leaflet": "^3.0.0",
     "antd": "^5.22.7",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
     "iso8601": "^1.1.1",
     "leaflet": "^1.9.4",
     "leaflet-timedimension": "^1.1.1",
@@ -32,12 +35,14 @@
     "path": "^0.12.7",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@tanstack/eslint-plugin-query": "^5.62.15",
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
