--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "ol-mapbox-style": "^12.4.0",
     "path": "^0.12.7",
     "postcss": "^8.4.49",
+    "proj4": "^2.15.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
@@ -44,6 +45,7 @@
     "@eslint/js": "^9.13.0",
     "@tanstack/eslint-plugin-query": "^5.62.15",
     "@types/node": "^22.9.0",
+    "@types/proj4": "^2.5.6",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
