update: authentication & province aqi rank

--- a/client/package.json
+++ b/client/package.json
@@ -20,16 +20,22 @@
     "@mladen/leaflet.tilelayer.wmts": "^1.0.0",
     "@mui/material": "^6.3.0",
     "@mui/x-charts": "^7.23.2",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
     "@tanstack/react-query": "^5.62.15",
+    "@tanstack/react-router": "^1.95.6",
     "@types/leaflet": "^1.9.14",
     "@types/react-leaflet": "^3.0.0",
     "antd": "^5.22.7",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "iso8601": "^1.1.1",
     "leaflet": "^1.9.4",
     "leaflet-timedimension": "^1.1.1",
+    "lucide-react": "^0.471.1",
     "ol": "^10.3.1",
     "ol-mapbox-style": "^12.4.0",
     "path": "^0.12.7",
@@ -39,11 +45,14 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
-    "tailwindcss": "^3.4.17"
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@tanstack/eslint-plugin-query": "^5.62.15",
+    "@tanstack/router-plugin": "^1.95.6",
     "@types/node": "^22.9.0",
     "@types/proj4": "^2.5.6",
     "@types/react": "^18.3.12",
