--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-leaflet": "^4.2.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
