--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "ioredis": "^5.4.2",
     "jsonwebtoken": "^9.0.2",
     "kysely": "^0.27.5",
+    "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
     "tsc-alias": "^1.8.10",
     "typescript": "^5.7.2",
@@ -29,6 +30,7 @@
     "@types/ioredis": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
+    "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.11.10",
     "kysely-codegen": "^0.17.0",
     "morgan": "^1.10.0",
