--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,10 +8,44 @@ jobs:
   build:
     runs-on:
       - codebuild-airq-${{github.run_id}}-${{github.run_attempt}}
-      - buildspec-override:true
+
     steps:
-      - name: Finish
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: 'ap-southeast-1'
+      - name: Build
         run: |
-          cd air-quality/server
-          npm install
-          npm run build
+            cd server
+            bun run install
+            bun run build
+            bun run docker
+      # - name: Start AWS CodeBuild Project
+      #   run: |
+      #     aws codebuild start-build --project-name airq
+
+      # - name: Wait for CodeBuild to complete
+      #   run: |
+      #     BUILD_ID=$(aws codebuild list-builds-for-project --project-name airq --sort-order DESCENDING --max-items 1 --query 'ids[0]' --output text)
+      #     aws codebuild batch-get-builds --ids $BUILD_ID --query 'builds[0].buildStatus' --output text
+      #     while [ "$(aws codebuild batch-get-builds --ids $BUILD_ID --query 'builds[0].buildStatus' --output text)" == "IN_PROGRESS" ]; do
+      #       echo "Build in progress..."
+      #       sleep 30
+      #     done
+      #     if [ "$(aws codebuild batch-get-builds --ids $BUILD_ID --query 'builds[0].buildStatus' --output text)" != "SUCCEEDED" ]; then
+      #       echo "Build failed"
+      #       exit 1
+      #     fi
+
+      # - name: Download build artifacts
+      #   run: |
+      #     aws s3 cp s3://your-codebuild-artifacts-bucket/artifact.zip ./artifact.zip
+
+      # - name: Deploy to S3
+      #   run: |
+      #     aws s3 sync ./artifact-folder s3://your-deployment-bucket --delete
