--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,10 +21,10 @@ jobs:
           aws-region: 'ap-southeast-1'
       - name: Build
         run: |
-            cd server
-            npm run install
-            npm run build
-            npm run docker
+          cd server
+          npm  install
+          npm run build
+          npm run docker
       # - name: Start AWS CodeBuild Project
       #   run: |
       #     aws codebuild start-build --project-name airq
