--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Build
         run: |
           cd server
+          git pull
           npm  install
           npm run build
           npm run docker
