--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,9 @@ jobs:
           cd server
           git pull
           npm  install
+          gcc -v
+          npm install -g node-gyp
+          npm install argon2
           npm run build
           npm run docker
       # - name: Start AWS CodeBuild Project
