--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: 'ap-southeast-1'
-      - name: Build
+      - name: Prepare
         run: |
           cd server
           git pull
@@ -28,6 +28,11 @@ jobs:
           npm install -g node-gyp
           npm install argon2
           npm run build
+      - name: Create .env file
+        run: |
+          aws secretsmanager list-secrets --query 'SecretList[*].Name' --output text | tr '\t' '\n' | while read secret; do
+            aws secretsmanager get-secret-value --secret-id "$secret" --query SecretString --output text >> .env
+          done
           npm run docker
       # - name: Start AWS CodeBuild Project
       #   run: |
