--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,6 @@ jobs:
           cd server
           git pull
           npm  install
-          gcc -v
           npm install -g node-gyp
           npm install argon2
           npm run build
@@ -32,7 +31,7 @@ jobs:
         run: |
           cd server
           aws secretsmanager list-secrets --query 'SecretList[*].Name' --output text | tr '\t' '\n' | while read secret; do
-            aws secretsmanager get-secret-value --secret-id "$secret" --query SecretString --output text | jq -r 'to_entries | .[] | "\(.key)=\(.value)"' >> dist/.env
+            aws secretsmanager get-secret-value --secret-id "$secret" --query SecretString --output text | jq -r 'to_entries | .[] | "\(.key)=\(.value)"' >> .env
           done
           docker compose up --build --detach --force-recreate
           docker save airq-server:latest | gzip > airq-server.tar.gz
