--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -5,13 +5,13 @@ ARG BUN_VERSION=1.1.20
 
 # Set the working directory in the container
 WORKDIR /app
-RUN curl -fsSL https://bun.sh/install | bash
-ENV PATH="${PATH}:/root/.bun/bin"
+# RUN curl -fsSL https://bun.sh/install | bash
+# ENV PATH="${PATH}:/root/.bun/bin"
 # Copy package.json and yarn.lock/package-lock.json
 COPY package*.json ./
 
 # Install dependencies
-RUN bun install
+RUN npm install
 # If you're using Yarn, you can use `RUN yarn install`
 # RUN bun run build
 # Copy the rest of the application code to the working directory
