--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,23 +19,21 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: 'ap-southeast-1'
-      - name: Prepare
-        run: |
-          cd server
-          git pull
-          npm  install
-          npm install -g node-gyp
-          npm install argon2
-          npm run build
-      - name: Push Docker Image to S3
+      - name: Build
         run: |
           cd server
           aws secretsmanager list-secrets --query 'SecretList[*].Name' --output text | tr '\t' '\n' | while read secret; do
             aws secretsmanager get-secret-value --secret-id "$secret" --query SecretString --output text | jq -r 'to_entries | .[] | "\(.key)=\(.value)"' >> .env
           done
-          docker compose build --no-cache
+
+          npm  install
+          npm install -g node-gyp
+          npm install argon2
+          npm run build
+          docker compose build
           docker save airq-server:latest | gzip > airq-server.tar.gz
           aws s3 cp airq-server.tar.gz s3://uet-airq/images/
+
       # - name: Create artifact
       #   run: |
       #     aws s3 sync server/dist s3://uet-airq/dist --delete
