--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
           npm install -g node-gyp
           npm install argon2
           npm run build
-          docker compose build
+          npm run docker
           docker save airq-server:latest | gzip > airq-server.tar.gz
           aws s3 cp airq-server.tar.gz s3://uet-airq/images/
 
