--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,8 +6,7 @@ on:
 
 jobs:
   build:
-    runs-on:
-      - codebuild-airq-${{github.run_id}}-${{github.run_attempt}}
+    runs-on: ubuntu-latest # Ensure you're using GitHub-hosted runners for GitHub Actions
 
     steps:
       - name: Checkout repository
@@ -19,21 +18,41 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: 'ap-southeast-1'
-      - name: Build
+
+      - name: Install dependencies
+        run: |
+          # Install Docker and other dependencies
+          sudo apt-get update
+          sudo apt-get install -y docker.io jq
+          npm install -g node-gyp
+
+      - name: Download secrets from AWS Secrets Manager
         run: |
           cd server
           aws secretsmanager list-secrets --query 'SecretList[*].Name' --output text | tr '\t' '\n' | while read secret; do
             aws secretsmanager get-secret-value --secret-id "$secret" --query SecretString --output text | jq -r 'to_entries | .[] | "\(.key)=\(.value)"' >> .env
           done
 
-          npm  install
+      - name: Install Node.js dependencies
+        run: |
+          cd server
+          npm install
           npm install -g node-gyp
           npm install argon2
+
+      - name: Build application
+        run: |
+          cd server
           npm run build
-          npm run docker
+
+      - name: Run Docker and Upload to S3
+        run: |
+          cd server
+          docker build -t airq-server .
           docker save airq-server:latest | gzip > airq-server.tar.gz
           aws s3 cp airq-server.tar.gz s3://uet-airq/images/
 
+      # Uncomment the below section if needed to sync the dist directory
       # - name: Create artifact
       #   run: |
       #     aws s3 sync server/dist s3://uet-airq/dist --delete
