--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
     "tsc-alias": "^1.8.10",
     "typescript": "^5.7.2",
     "vercel": "^39.1.2",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
