--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          cd server
           npm install
           npm install -g node-gyp
           npm install argon2
