--- a/server/package.json
+++ b/server/package.json
@@ -35,7 +35,6 @@
     "@types/pg": "^8.11.10",
     "kysely-codegen": "^0.17.0",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.9",
-    "tsconfig-paths": "^4.2.0"
+    "nodemon": "^3.1.9"
   }
 }
