--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,7 +55,7 @@ jobs:
           cd server
           npm run docker
           docker save airq-server:latest | gzip > airq-server.tar.gz
-          aws s3 cp airq-server.tar.gz s3://uet-airq/images
+          aws s3 cp airq-server.tar.gz s3://uet-airq/airq-server.tar.gz
 
       # Uncomment the below section if needed to sync the dist directory
       # - name: Create artifact
