--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
     "react-icons": "^5.4.0",
     "react-leaflet": "^4.2.1",
     "tailwind-merge": "^2.6.0",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7"
   },
