update: station point map css & fill data and notification

--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "leaflet": "^1.9.4",
     "leaflet-timedimension": "^1.1.1",
     "lucide-react": "^0.471.1",
+    "moment": "^2.30.1",
     "ol": "^10.3.1",
     "ol-mapbox-style": "^12.4.0",
     "path": "^0.12.7",
@@ -43,6 +44,7 @@
     "proj4": "^2.15.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
+    "react-compiler-runtime": "^19.0.0-beta-714736e-20250131",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-leaflet": "^4.2.1",
@@ -60,7 +62,9 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
+    "babel-plugin-react-compiler": "^19.0.0-beta-714736e-20250131",
     "eslint": "^9.13.0",
+    "eslint-plugin-react-compiler": "^19.0.0-beta-714736e-20250131",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
