--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -2,5 +2,6 @@
     "plugins": [
         "prettier-plugin-tailwindcss"
     ],
-    "printWidth": 120
+    "printWidth": 120,
+    "bracketSameLine": true
 }
