--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,8 @@
     "moment": "^2.30.1",
     "ol": "^10.3.1",
     "ol-mapbox-style": "^12.4.0",
+    "ol-wind": "^1.1.9",
+    "ol5-wind": "^1.1.7",
     "path": "^0.12.7",
     "postcss": "^8.4.49",
     "proj4": "^2.15.0",
