--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "leaflet-timedimension": "^1.1.1",
     "lucide-react": "^0.471.1",
     "moment": "^2.30.1",
+    "motion": "^12.4.10",
     "ol": "^10.3.1",
     "ol-mapbox-style": "^12.4.0",
     "ol-wind": "^1.1.9",
