--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.717.0",
     "argon2": "^0.41.1",
+    "axios": "^1.8.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -19,10 +20,10 @@
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
     "tsc-alias": "^1.8.10",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.2",
     "vercel": "^39.1.2",
-    "zod": "^3.24.1",
-    "tsconfig-paths": "^4.2.0"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
