--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "scrape": "python src/scripts/scraper.py"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.717.0",
+    "@aws-sdk/client-s3": "^3.782.0",
+    "@aws-sdk/s3-request-presigner": "^3.782.0",
     "argon2": "^0.41.1",
     "axios": "^1.8.2",
     "cors": "^2.8.5",
@@ -17,6 +18,7 @@
     "ioredis": "^5.4.2",
     "jsonwebtoken": "^9.0.2",
     "kysely": "^0.27.5",
+    "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
     "tsc-alias": "^1.8.10",
@@ -32,6 +34,7 @@
     "@types/ioredis": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.12",
     "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.11.10",
     "kysely-codegen": "^0.17.0",
