--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,9 @@
         "express": "^4.21.2",
         "ioredis": "^5.4.2",
         "jsonwebtoken": "^9.0.2",
+        "jszip": "^3.10.1",
         "kysely": "^0.27.5",
+        "moment": "^2.30.1",
         "multer": "^1.4.5-lts.2",
         "nodemailer": "^6.9.16",
         "pg": "^8.13.1",
