--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,7 @@
         "tsconfig-paths": "^4.2.0",
         "typescript": "^5.7.2",
         "vercel": "^39.1.2",
-        "zod": "^4.0.0-beta.20250411T232125"
+        "zod": "^3.24.2"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.6",
