--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,9 @@
         "start": "node dist/server.js",
         "build": "tsc && tsc-alias",
         "docker": "docker compose build",
-        "scrape": "python src/scripts/scraper.py"
+        "scrape": "python src/scripts/scraper.py",
+        "test": "jest",
+        "test:watch": "jest --watch"
     },
     "dependencies": {
         "@aws-sdk/client-s3": "^3.782.0",
@@ -34,13 +36,19 @@
         "@types/cors": "^2.8.17",
         "@types/express": "^5.0.0",
         "@types/ioredis": "^5.0.0",
+        "@types/jest": "^29.5.14",
         "@types/jsonwebtoken": "^9.0.7",
         "@types/morgan": "^1.9.9",
         "@types/multer": "^1.4.12",
         "@types/nodemailer": "^6.4.17",
         "@types/pg": "^8.11.10",
+        "@types/supertest": "^6.0.3",
+        "jest": "^29.7.0",
+        "jest-mock-extended": "^4.0.0-beta1",
         "kysely-codegen": "^0.17.0",
         "morgan": "^1.10.0",
-        "nodemon": "^3.1.9"
+        "nodemon": "^3.1.9",
+        "supertest": "^7.1.0",
+        "ts-jest": "^29.3.2"
     }
 }
