--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,11 +1,24 @@
-name: 'Server AWS CodeBuild CI'
+name: "Server AWS CodeBuild CI"
 on:
   push:
     branches:
-      - 'release'
+      - "release"
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout repo
+        uses: actions/checkout@v3
+      - name: use node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "20.x"
+      - run: npm install
+      - run: npm test
+
   build:
+    needs: test
     runs-on: codebuild-airq-${{github.run_id}}-${{github.run_attempt}} # Ensure you're using GitHub-hosted runners for GitHub Actions
 
     steps:
@@ -17,7 +30,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: 'ap-southeast-1'
+          aws-region: "ap-southeast-1"
 
       # - name: Install dependencies
       #   run: |
