--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,8 +14,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "20.x"
-      - run: npm install
-      - run: npm test
+      - run: |
+          cd server
+          npm install
+          npm test
 
   build:
     needs: test
