--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,10 +14,29 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "20.x"
-      - run: |
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: "ap-southeast-1"
+
+      - name: Install dependencies
+        run: |
           cd server
           npm install
-          npm test
+          npm install -g node-gyp
+          npm install argon2
+
+      - name: Download secrets from AWS Secrets Manager
+        run: |
+          cd server
+          aws secretsmanager list-secrets --query 'SecretList[*].Name' --output text | tr '\t' '\n' | while read secret; do
+            aws secretsmanager get-secret-value --secret-id "$secret" --query SecretString --output text | jq -r 'to_entries | .[] | "\(.key)=\(.value)"' >> .env
+          done
+
+      - name: Test
+        run: cd server && npm test
 
   build:
     needs: test
