--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,9 @@
         "tsconfig-paths": "^4.2.0",
         "typescript": "^5.7.2",
         "vercel": "^39.1.2",
-        "zod": "^3.24.2"
+        "zod": "^3.24.2",
+        "supertest": "^7.1.0",
+        "vitest": "^3.1.1"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.6",
@@ -50,9 +52,7 @@
         "kysely-codegen": "^0.17.0",
         "morgan": "^1.10.0",
         "nodemon": "^3.1.9",
-        "supertest": "^7.1.0",
         "ts-jest": "^29.3.2",
-        "ts-node": "^10.9.2",
-        "vitest": "^3.1.1"
+        "ts-node": "^10.9.2"
     }
 }
