--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,12 +54,12 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: "ap-southeast-1"
 
-      # - name: Install dependencies
-      #   run: |
-      #     cd server
-      #     npm install
-      #     npm install -g node-gyp
-      #     npm install argon2
+      - name: Install dependencies
+        run: |
+          cd server
+          npm install
+          npm install -g node-gyp
+          npm install argon2
 
       - name: Download secrets from AWS Secrets Manager
         run: |
