--- a/server/package.json
+++ b/server/package.json
@@ -10,42 +10,41 @@
         "test:watch": "NODE_ENV=test vitest"
     },
     "dependencies": {
-        "@aws-sdk/client-s3": "^3.782.0",
-        "@aws-sdk/s3-request-presigner": "^3.782.0",
+        "@aws-sdk/client-s3": "^3.787.0",
+        "@aws-sdk/s3-request-presigner": "^3.787.0",
         "argon2": "^0.41.1",
-        "axios": "^1.8.2",
+        "axios": "^1.8.4",
         "cors": "^2.8.5",
-        "dotenv": "^16.4.7",
+        "dotenv": "^16.5.0",
         "express": "^4.21.2",
-        "ioredis": "^5.4.2",
+        "ioredis": "^5.6.1",
         "jsonwebtoken": "^9.0.2",
         "jszip": "^3.10.1",
-        "kysely": "^0.27.5",
+        "kysely": "^0.27.6",
         "moment": "^2.30.1",
         "multer": "^1.4.5-lts.2",
-        "nodemailer": "^6.9.16",
-        "pg": "^8.13.1",
-        "tsc-alias": "^1.8.10",
-        "tsconfig-paths": "^4.2.0",
-        "typescript": "^5.7.2",
-        "vercel": "^39.1.2",
-        "zod": "^3.24.2",
+        "nodemailer": "^6.10.1",
+        "pg": "^8.14.1",
         "supertest": "^7.1.0",
-        "vitest": "^3.1.1"
+        "tsc-alias": "^1.8.15",
+        "tsconfig-paths": "^4.2.0",
+        "typescript": "^5.8.3",
+        "vitest": "^3.1.1",
+        "zod": "^3.24.2"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.6",
         "@types/chai": "^5.2.1",
         "@types/cors": "^2.8.17",
-        "@types/express": "^5.0.0",
+        "@types/express": "^5.0.1",
         "@types/ioredis": "^5.0.0",
         "@types/jest": "^29.5.14",
-        "@types/jsonwebtoken": "^9.0.7",
+        "@types/jsonwebtoken": "^9.0.9",
         "@types/mocha": "^10.0.10",
         "@types/morgan": "^1.9.9",
         "@types/multer": "^1.4.12",
         "@types/nodemailer": "^6.4.17",
-        "@types/pg": "^8.11.10",
+        "@types/pg": "^8.11.13",
         "@types/supertest": "^6.0.3",
         "jest": "^29.7.0",
         "jest-mock-extended": "^4.0.0-beta1",
