--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
         "docker": "docker compose build",
         "scrape": "python src/scripts/scraper.py",
         "test": "NODE_ENV=test vitest run",
-        "test:watch": "NODE_ENV=test vitest"
+        "test:watch": "NODE_ENV=test vitest",
+        "lint": "eslint --fix"
     },
     "dependencies": {
         "@aws-sdk/client-s3": "^3.787.0",
@@ -33,6 +34,7 @@
         "zod": "^3.24.2"
     },
     "devDependencies": {
+        "@eslint/js": "^9.25.0",
         "@types/bcryptjs": "^2.4.6",
         "@types/chai": "^5.2.1",
         "@types/cors": "^2.8.17",
@@ -46,12 +48,14 @@
         "@types/nodemailer": "^6.4.17",
         "@types/pg": "^8.11.13",
         "@types/supertest": "^6.0.3",
+        "eslint": "^9.25.0",
         "jest": "^29.7.0",
         "jest-mock-extended": "^4.0.0-beta1",
         "kysely-codegen": "^0.17.0",
         "morgan": "^1.10.0",
         "nodemon": "^3.1.9",
         "ts-jest": "^29.3.2",
-        "ts-node": "^10.9.2"
+        "ts-node": "^10.9.2",
+        "typescript-eslint": "^8.30.1"
     }
 }
